--- a/ConsoleApp_Excel/ConsoleApp_Excel.csproj
+++ b/ConsoleApp_Excel/ConsoleApp_Excel.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.1" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
   </ItemGroup>
 
