--- a/ConsoleApp_Excel/ConsoleApp_Excel.csproj
+++ b/ConsoleApp_Excel/ConsoleApp_Excel.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.1" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.20.0" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
   </ItemGroup>
 
 </Project>
